; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_thread.c_init_thread_sync_helpers.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_thread.c_init_thread_sync_helpers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@start_event = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [20 x i8] c"CreateEvent failed\0A\00", align 1
@stop_event = common dso_local global i32* null, align 8
@num_synced = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @init_thread_sync_helpers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_thread_sync_helpers() #0 {
  %1 = load i32, i32* @TRUE, align 4
  %2 = load i32, i32* @FALSE, align 4
  %3 = call i8* @CreateEventW(i32* null, i32 %1, i32 %2, i32* null)
  %4 = bitcast i8* %3 to i32*
  store i32* %4, i32** @start_event, align 8
  %5 = load i32*, i32** @start_event, align 8
  %6 = icmp ne i32* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @ok(i32 %7, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* @TRUE, align 4
  %10 = load i32, i32* @FALSE, align 4
  %11 = call i8* @CreateEventW(i32* null, i32 %9, i32 %10, i32* null)
  %12 = bitcast i8* %11 to i32*
  store i32* %12, i32** @stop_event, align 8
  %13 = load i32*, i32** @stop_event, align 8
  %14 = icmp ne i32* %13, null
  %15 = zext i1 %14 to i32
  %16 = call i32 @ok(i32 %15, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* @num_synced, align 4
  ret void
}

declare dso_local i8* @CreateEventW(i32*, i32, i32, i32*) #1

declare dso_local i32 @ok(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
